# cloud-systems-compiler

./: .gitignore  AGENTS.md  README.md
sdk/python/csc/: README.md  pyproject.toml
sdk/python/csc/src/csc/: __init__.py  app.py  registry.py  resources.py
sdk/python/csc/tests/: test_dsl.py
